# raptor

./: CMakeLists.txt
RAPtor/demos/: eigenmatrices.cpp  run.sh
cmake/: FindMKL.cmake  cxx11.cmake  mpi_config.cmake
examples/: CMakeLists.txt  benchmark_io.cpp  benchmark_matmult.cpp  benchmark_matops.cpp  benchmark_nek5000.cpp  benchmark_rss.cpp  benchmark_sas.cpp  benchmark_tap_amg.cpp  benchmark_tap_spmv.cpp  model_spmv.cpp  profile_tap_amg.cpp
interfaces/: raptor_pc_shell.c  raptor_pc_shell.h
raptor/: CMakeLists.txt  par_strength.cpp
raptor/aggregation/: par_prolongation.cpp  par_smoothed_aggregation_solver.hpp
raptor/core/: comm_pkg.cpp  comm_pkg.hpp  matrix.cpp  matrix.hpp  par_matrix.cpp  par_matrix.hpp  par_vector.cpp  par_vector.hpp  topology.hpp  vector.cpp  vector.hpp
raptor/core/tests/: CMakeLists.txt
raptor/gallery/: matrix_IO.cpp  par_matrix_IO.cpp
raptor/gallery/tests/: CMakeLists.txt
raptor/krylov/: CMakeLists.txt  cg.cpp
raptor/krylov/tests/: CMakeLists.txt  test_cg.cpp
raptor/multilevel/: par_multilevel.hpp
raptor/multilevel/tests/: CMakeLists.txt
raptor/ruge_stuben/: CMakeLists.txt  par_interpolation.cpp  par_interpolation.hpp  par_ruge_stuben_solver.hpp
raptor/ruge_stuben/tests/: CMakeLists.txt
raptor/smoothed_aggregation/tests/: CMakeLists.txt
raptor/tests/: CMakeLists.txt
raptor/util/linalg/: CMakeLists.txt  mkl_spmv.cpp  par_matmult.cpp  par_relax.cpp  par_spmv.cpp  spmv.hpp  trisolves.cpp
raptor/util/linalg/seq/: trisolve.cpp  trisolves.cpp
raptor/util/linalg/tests/: test_spmv.cpp
raptor/util/tests/: CMakeLists.txt  PCG_ILU.cpp  PCG_ILU.hpp  mesh3em5_low.mtx  systimer.h  test_ILU.cpp  test_ILU.hpp  test_ILU_shared.cpp  test_ILU_shared.hpp  test_ILU_shared_fence.cpp  test_fwd_sub.cpp  test_par_fwd_sub.cpp
